--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./lib/index.js",
   "scripts": {
     "start": "node ./lib",
-    "test": "ts-mocha -p ./tsconfig.json './src/route-handlers/accounts-handler.spec.ts'",
+    "test": "ts-mocha -p ./tsconfig.json './src/**/*.spec.ts'",
     "build": "npm run clear-build-dir && tsc",
     "watch": "tsc -w",
     "package": "npm run build && node ./scripts/package",
